--- a/index.html
+++ b/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porttfolio Profile</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-----------header section start------------->
+    <header>
+        <section class="container">
+            <div class="nav-container">
+                <div class="nav-title">
+                    <h2>Ma<span class="title-r">r</span>y</h2>
+                </div>
+                <div class="nav-body">
+                    <ul>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><button>Hire Me</button></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="profile-container">
+                <div class="profile-dec">
+                    <h3>Hi, I am</h3>
+                    <h1>Mary Hardy</h1>
+                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
+                        society behaved moments.</p>
+                    <div class="profile-btn">
+                        <button class="btn-d">Download CV</button>
+                        <button class="btn-c">Contact</button>
+                    </div>
+                </div>
+                <div class="profile-img">
+                    <img src="./images/hardy.png" alt="">
+                </div>
+            </div>
+        </section>
+    </header>
+    <!-----------header section end------------->
+
+
+    <!-----------main section start------------->
+    <main>
+
+    </main>
+    <!-----------main section end------------->
+
+
+    <!-----------footer section start------------->
+    <footer>
+
+    </footer>
+    <!-----------footer section end------------->
+
+
 </body>
 </html>
