--- a/index.html
+++ b/index.html
@@ -49,7 +49,78 @@
 
     <!-----------main section start------------->
     <main>
+        <article>
+            <!-----------About section start------------->
+            <section class="about-container">
+                <div class="about-title">
+                    <h2>About Me</h2>
+                    <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+                        slick websites that provide real value to the end user. Thousands of clients have procured
+                        exceptional resulfs while working with me. Delivering work within time and budget which meets
+                        clients requirements in our mata.</p>
+                </div>
+                <div class="about-body">
+                    <div class="about-info">
+                        <h5>Name: </h5>
+                        <h4>S H SuHan</h4>
+                    </div>
+                    <div class="about-info">
+                        <h5>Email: </h5>
+                        <h4>suhan@gmail.com</h4>
+                    </div>
+                    <div class="about-info">
+                        <h5>Date of birth: </h5>
+                        <h4>11 November 1987</h4>
+                    </div>
+                    <div class="about-info">
+                        <h5>From: </h5>
+                        <h4>Los Angeles, USA</h4>
+                    </div>
+                </div>
+            </section>
+            <!-----------About section end------------->
 
+            <!-----------What do section start------------->
+            <section class="what-do-container">
+                <div class="what-do-title">
+                    <h1>What I do</h1>
+                    <p>I have more than 10 years experience building software for clients all over the world. Below is a
+                        quick overview of my main technical skill sets and technologies i use. Want to find out more
+                        about my experience? Check out my online resume and project portfolio.</p>
+                </div>
+                <div class="what-do-body">
+                    <div class="what-do-card">
+                        <img src="./images/icons/js.png" alt="">
+                        <h3>Vanilla JavaScript</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="what-do-card">
+                        <img src="./images/icons/react.png" alt="">
+                        <h3>React</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="what-do-card">
+                        <img src="./images/icons/nodejs.png" alt="">
+                        <h3>Node.js</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="what-do-card">
+                        <img src="./images/icons/mongo.png" alt="">
+                        <h3>MongoDB</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </section>
+            <!-----------What do section end------------->
+
+            <!-----------Resume section end------------->
+            <!-----------Resume section end------------->
+
+        </article>
     </main>
     <!-----------main section end------------->
 
