--- a/index.html
+++ b/index.html
@@ -117,7 +117,72 @@
             </section>
             <!-----------What do section end------------->
 
-            <!-----------Resume section end------------->
+            <!-----------Resume section start------------->
+            <section class="resume-container">
+                    <h1 class="resume-title">A summary of My Resume</h1>
+                <div class="resume">
+                    <div class="education">
+                        <div class="education-part">
+                            <h1>My Education</h1>
+                            <h3>Master in Computer Engineering
+                                color</h3>
+                            <h6>Harvard University / 2015 - 2017</h6>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+
+                                FontAwesome 5
+                                free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr class="hr">
+                        <div class="education-part">
+                            <h3>Master in Computer Engineering
+                                color</h3>
+                            <h6>Harvard University / 2015 - 2017</h6>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+
+                                FontAwesome 5
+                                free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr class="hr">
+                        <div class="education-part">
+                            <h3>Master in Computer Engineering
+                                color</h3>
+                            <h6>Harvard University / 2015 - 2017</h6>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+
+                                FontAwesome 5
+                                free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                    </div>
+
+
+                    <div class="education">
+                        <div class="education-part">
+                            <h1>My Experience</h1>
+                            <h3>Sr. Font End Developer</h3>
+                            <h6>Apple Inc / 2020 - Current</h6>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+
+                                FontAwesome 5
+                                free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr class="hr">
+                        <div class="education-part">
+                            <h3>Sr. Font End Developer</h3>
+                            <h6>Apple Inc / 2020 - Current</h6>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+
+                                FontAwesome 5
+                                free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr class="hr">
+                        <div class="education-part">
+                            <h3>Sr. Font End Developer</h3>
+                            <h6>Apple Inc / 2020 - Current</h6>
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+
+                                FontAwesome 5
+                                free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="cv-btn">
+                    <button class="btn-d">Download CV</button>
+                </div>
+            </section>
             <!-----------Resume section end------------->
 
         </article>
