Finally about footer  Scation Done.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,8 +36,8 @@
                     <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
                         society behaved moments.</p>
                     <div class="profile-btn">
-                        <button class="btn-d">Download CV</button>
-                        <button class="btn-c">Contact</button>
+                        <button class="btn-d"><i class="fa-solid fa-download"></i> Download CV</button>
+                        <button class="btn-c"><i class="fa-solid fa-phone"></i> Contact</button>
                     </div>
                 </div>
                 <div class="profile-img">
@@ -180,7 +182,7 @@
                     </div>
                 </div>
                 <div class="cv-btn">
-                    <button class="btn-d">Download CV</button>
+                    <button class="btn-d"><i class="fa-solid fa-download"></i>  Download CV</button>
                 </div>
             </section>
             <!-----------Resume section end------------->
@@ -192,7 +194,26 @@
 
     <!-----------footer section start------------->
     <footer>
-
+        <div class="footer-container">
+            <div class="footer-title">
+                <h2>Lets Connect</h2>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                    Monday through Friday.</p>
+                <div class="footer-icon">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+            <div class="footer-body">
+                <h2>Let’s Message me</h2>
+                <form action="" class="footer-form">
+                    <input type="text" name="name" id="name" placeholder="Your Name ">
+                    <input type="email" name="email" id="email" placeholder="Your Email">
+                    <textarea placeholder="Message" name="Message" id="Message" cols="30" rows="10"></textarea>
+                </form>
+            </div>
+        </div>
     </footer>
     <!-----------footer section end------------->
 
